--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         </div>
                         <div class="features-content">
                             <p class="text">Clear all your dailies without any hassle. Supports up to 7 characters.</p>
-                            <a class="features-btn" href="#">LEARN MORE</a>
+                            <a class="features-btn" href="https://t.me/GetReliant">LEARN MORE</a>
                         </div>
                     </div> <!-- single features -->
                 </div>
